# src/controllers/auth/auth.controller.ts
@@ -4,6 +4,7 @@ import { hash, compare } from 'bcryptjs';
 
 // DTO
 import { SignupRequestDto } from './dto/signup-request.dto';
+import { SigninRequestDto } from './dto/signin-request.dto';
 
 // Entity
 import { Admin } from '../../entity';
@@ -11,7 +12,6 @@ import { Admin } from '../../entity';
 // Utils
 import { ApiError } from '../../utils/ApiError';
 import { sign } from 'jsonwebtoken';
-import { SigninRequestDto } from './dto/signin-request.dto';
 
 @Tags('Auth')
 @Route('auth')
@@ -23,7 +23,7 @@ export default class AuthController extends Controller {
   ): Promise<{ token: string }> {
     try {
       const existingAdmin = await Admin.findOne({ where: { email } });
-      if (existingAdmin) throw new ApiError(400, 'Email is already used');
+      if (existingAdmin) throw new ApiError(400, 'Email is already used.');
 
       const admin = new Admin();
       admin.id = uuidv4();
@@ -31,21 +31,22 @@ export default class AuthController extends Controller {
       admin.name = name;
       admin.password = await hash(password, 10);
 
-      await admin.save();
-
-      const JWT_SECRET = process.env.JWT_SECRET as string;
+      const JWT_SECRET_KEY = process.env.JWT_SECRET_KEY as string;
 
       const token = sign(
         {
           id: admin.id,
           exp: Math.floor(Date.now() / 1000) + 60 * 60 * 24 * 15,
         },
-        JWT_SECRET
+        JWT_SECRET_KEY
       );
+
+      await admin.save();
 
       return { token };
     } catch (error: any) {
-      throw new ApiError(500, error);
+      if (error instanceof ApiError) throw error;
+      else throw new ApiError(500, error);
     }
   }
 
@@ -53,7 +54,38 @@ export default class AuthController extends Controller {
   @SuccessResponse('201', 'Admin Login')
   public async login(
     @Body() { email, password }: SigninRequestDto
-  ): Promise<Admin> {
-    return new Admin();
+  ): Promise<{ token: string }> {
+    try {
+      const admin = await Admin.findOne({ where: { email } });
+      // If user is not found
+      if (!admin)
+        throw new ApiError(
+          400,
+          'Your eamil or your password might not correct.'
+        );
+
+      const isPasswordMatch = await compare(password, admin.password);
+      if (!isPasswordMatch) {
+        throw new ApiError(
+          400,
+          'Your eamil or your password might not correct.'
+        );
+      }
+
+      const JWT_SECRET_KEY = process.env.JWT_SECRET_KEY as string;
+
+      const token = sign(
+        {
+          id: admin.id,
+          exp: Math.floor(Date.now() / 1000) + 60 * 60 * 24 * 15,
+        },
+        JWT_SECRET_KEY
+      );
+
+      return { token };
+    } catch (error: any) {
+      if (error instanceof ApiError) throw error;
+      else throw new ApiError(500, error);
+    }
   }
 }
