# src/routes/auth.router.ts
@@ -1,8 +1,14 @@
 import * as express from 'express';
 import { Request, Response } from 'express';
 
+// Controllers
 import AuthController from '../controllers/auth/auth.controller';
+
+// DTO
 import { SignupRequestDto } from '../controllers/auth/dto/signup-request.dto';
+import { SigninRequestDto } from '../controllers/auth/dto/signin-request.dto';
+
+// Erorr handling
 import { ApiError } from '../utils/ApiError';
 import dtoValidationMiddleware from '../utils/Validator';
 
@@ -16,10 +22,24 @@ Router.post(
   async (req: Request, res: Response) => {
     try {
       const { email, password, name } = req.body;
-      const msg = await authController.register({ email, password, name });
-      res.send({ msg });
+      const response = await authController.register({ email, password, name });
+      res.send(response);
     } catch (error: any) {
-      res.status(500).send({ error: 'Internal Server Error.' });
+      res.status(error.statusCode).send({ message: error.message });
+    }
+  }
+);
+
+Router.post(
+  '/login',
+  dtoValidationMiddleware(SigninRequestDto),
+  async (req: Request, res: Response) => {
+    try {
+      const { email, password } = req.body;
+      const response = await authController.login({ email, password });
+      res.send(response);
+    } catch (error: any) {
+      res.status(error.statusCode).send({ message: error.message });
     }
   }
 );
